# CompGen

./: .gitignore  .gitmodules  AGENT.md  CLAUDE.md  EXTENSION_POINTS.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  gpu.yml  mcp.yml  nightly_e2e.yml  pr.yml  release.yml
benchmarks/: __init__.py  adapters.py  cli.py  collector.py  compare.py  megakernel_warmup.py  plots.py  plots_codegen.py  record.py  registry.py  runner.py  spec.py  suite_adapters.py  suite_runner.py  workloads.py
benchmarks/results/: expert_fixture.json
configs/graph_compilation/: always_test_models.yaml  wide_test_models.yaml
configs/model_admission/: always_test_models.yaml  blocking_models.yaml  model_registry.yaml  source_candidates.yaml  stress_models.yaml
configs/models/: agibot_go1_step.yaml  agibot_go2_step.yaml  blip2_opt_step.yaml  custom_unsupported_op.yaml  deepseek_ocr_3b.yaml  deepseek_v4_flash_text.yaml  florence2_base_step.yaml  gemma2_2b_step.yaml  graph_break_mlp.yaml  holdout_mlp_large_k.yaml  holdout_mlp_odd_shapes.yaml  holdout_pointwise_chain_renamed.yaml  holdout_two_matmuls_shared_input.yaml  holdout_unsupported_attention.yaml  lingbot_world_step.yaml  llama32_1b_step.yaml  llama4_scout_text.yaml  llava.yaml  merlin_dronet.yaml  merlin_mlp.yaml  merlin_mlp_wide.yaml  moondream2_step.yaml  octo_step.yaml  openvla_step.yaml  paligemma_3b_step.yaml  phi2_step.yaml  phi3_5_mini_step.yaml  phi3_mini_step.yaml  pi0_step.yaml  proxy_diffusion_vla.yaml  proxy_llava.yaml  proxy_ocr.yaml  proxy_openvla.yaml  proxy_qwen_vl.yaml  proxy_vla.yaml  proxy_vlm.yaml  qwen2_5_0_5b_step.yaml  qwen2_5_1_5b_step.yaml  qwen2_5_vl.yaml  qwen3_vl_235b_a22b_instruct.yaml  (+15 more)
configs/remote_targets/: README.md  aws_trn1_inst.yaml  firesim_gemmini.yaml  firesim_radiance.yaml  hexagon_dev_1.yaml  tpu_v5e_pod_1.yaml
configs/slices/: agibot_go1_single_step.yaml  agibot_go2_single_step.yaml  blip2_opt_single_image_qa.yaml  custom_unsupported_op.yaml  deepseek_ocr_page_crop.yaml  deepseek_v4_flash_hybrid_attention.yaml  deepseek_v4_flash_moe_block.yaml  florence2_base_single_image_qa.yaml  gemma2_2b_single_step.yaml  lingbot_world_single_step.yaml  llama32_1b_single_step.yaml  llama4_scout_decoder_pair.yaml  llava_single_image_qa.yaml  moondream2_single_image_qa.yaml  octo_single_step.yaml  openvla_single_step.yaml  paligemma_3b_single_image_qa.yaml  phi2_single_step.yaml  phi3_5_mini_single_step.yaml  phi3_mini_single_step.yaml  pi0_single_step.yaml  proxy_diffusion_vla_single_step.yaml  proxy_llava_single_image_qa.yaml  proxy_ocr_page_crop.yaml  proxy_openvla_single_step.yaml  proxy_qwen_vl_single_image_qa.yaml  qwen2_5_0_5b_single_step.yaml  qwen2_5_1_5b_single_step.yaml  qwen2_5_vl_single_image_qa.yaml  qwen3_vl_235b_text_moe_slice.yaml  qwen3_vl_235b_vision_projector_slice.yaml  qwen3_vl_8b_single_image_qa.yaml  rtx_rt1x_single_step.yaml  smollm2_360m_single_step.yaml  smollm2_single_step.yaml  smollm_135m_single_step.yaml  smolvla_single_step.yaml  smolvlm2_single_image_qa.yaml  tinyllama_single_step.yaml
configs/targets/: cuda_sm75.yaml  host_cpu.yaml
contrib/: README.md
data/: compiler_optimization_kb.yaml
data/ops/: attention.yaml  batch_norm.yaml  conv2d.yaml  elementwise.yaml  gather.yaml  layer_norm.yaml  matmul.yaml  reduction.yaml  transpose.yaml
data/recipes/: attention_flash.yaml  batched_matmul_gpu.yaml  conv2d_gpu_implicit_gemm.yaml  depthwise_conv2d_gpu.yaml  elementwise_fusion_chain.yaml  layernorm_gpu_fused.yaml  matmul_cpu_avx2.yaml  matmul_gpu_tensor_core.yaml  matmul_npu_systolic.yaml  (+2 more)
docs/: index.md  phase_c_status.md  phase_d_status.md  vendor_dialects.md
examples/: README.md  llama_block.py
infra/: __init__.py
runtime/: CMakeLists.txt  Makefile
runtime/include/compgen/: arena.h  engine.h  hal.h  hal_types.h  ops.h  perf_counters.h  task.h  topology.h  trace.h  transport.h  types.h
runtime/native/libcompgen_rt/: CMakeLists.txt
runtime/native/libcompgen_rt/include/compgen_rt/: compgen_rt.h
runtime/native/libcompgen_rt/src/core/: buffer.c  command_buffer.c  cpu_executor.c  event_tensor.c  executable.c  instance.c  internal.h  platform.h  queue.c  semaphore.c
runtime/native/libcompgen_rt/src/drivers/cpu_sync/: cpu_sync.c
runtime/native/libcompgen_rt/src/drivers/cpu_task/: cpu_task.c
runtime/native/libcompgen_rt/src/drivers/cuda/: cuda_driver.c  dynamic_queue.cu  event_tensor.cu  megakernel_launcher.cu  multi_etensor.cu  nccl_bridge.c  probe.cu
runtime/native/libcompgen_rt/src/drivers/firesim/: firesim_driver.c
runtime/native/libcompgen_rt/src/drivers/hip/: hip_driver.c
runtime/native/libcompgen_rt/src/drivers/vulkan/: vulkan_driver.c
runtime/native/libcompgen_rt/src/platform/bare/: bare.c  compgen_rt_platform_defs.h
runtime/native/libcompgen_rt/src/platform/posix/: compgen_rt_platform_defs.h  posix.c
runtime/native/libcompgen_rt/src/platform/zephyr/: compgen_rt_platform_defs.h  zephyr_platform.c
runtime/native/libcompgen_rt/tests/: test_command_buffer.c  test_cpu_task.c  test_cuda.c  test_event_tensor.c  test_harness.h  test_integration.c  test_phase_g_scaffolds.c  test_semaphore.c
runtime/native/libcompgen_rt/tests/bare/: link.ld  smoke.c  startup.S  syscalls.c
runtime/native/libcompgen_rt/toolchains/: riscv64-zephyr-elf.cmake
runtime/src/: arena.c  engine.c  ops.c  perf_counters.c  task.c  trace.c  transport_local.c
runtime/src/hal/: cpu_driver.c  cpu_driver.h  hal.c  hal_internal.h
runtime/templates/firesim/: main.c.tmpl
scripts/: bootstrap.sh  clean_generated.py  compgen_firesim_run.sh  e2e_advanced.py  e2e_demo.py  e2e_kernel_truthpath.py  e2e_layout_truthpath.py  e2e_pack_truthpath.py  e2e_truthpath.py  libcompgen_rt_bare_spike.sh  mcp_decision_override_e2e.py  mcp_gap_audit.py  mcp_llama_e2e.py  mcp_llama_stdio_e2e.py  new_gen_worktree.sh  paper_metrics.py  saturn_opu_spike_e2e.sh  synthesize_guard.py  targetgen_demo.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_e2e_demo.py  test_e2e_integration.py  test_example_models.py  test_smolvla_e2e.py  test_version.py
(+2143 files in other folders)
