[project]
name = "compgen"
version = "0.1.0"
description = "An LLM-driven compiler generator for heterogeneous hardware targets"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "CompGen Contributors" },
]
keywords = ["compiler", "mlir", "llm", "heterogeneous", "code-generation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4",
    "xdsl>=0.24",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "jinja2>=3.1",
    "rich>=13.0",
    "click>=8.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
solve = [
    "ortools>=9.8",
    "z3-solver>=4.12",
    "scipy>=1.11",
]
quantization = [
    "torchao>=0.16",
]
iree = [
    "iree-compiler>=3.0",
    "iree-runtime>=3.0",
]
benchmarks = [
    "matplotlib>=3.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
ray = [
    "ray[default]>=2.9",
    "ray[serve]>=2.9",
    "ray[tune]>=2.9",
    "fastapi>=0.110",
]

[project.scripts]
compgen = "compgen.cli:main"

[project.urls]
Repository = "https://github.com/compgen-project/compgen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/compgen"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that need GPU hardware",
    "requires_mlir: marks tests that need MLIR/xDSL installed",
    "requires_ray: marks tests that need Ray installed",
]
