[project]
name = "compgen"
version = "0.1.0"
description = "An LLM-driven compiler generator for heterogeneous hardware targets"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "CompGen Contributors" },
]
keywords = ["compiler", "mlir", "llm", "heterogeneous", "code-generation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4",
    "xdsl>=0.24",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "jinja2>=3.1",
    "rich>=13.0",
    "click>=8.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
llm = [
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
solve = [
    "ortools>=9.8",
    "z3-solver>=4.12",
    "scipy>=1.11",
]
quantization = [
    "torchao>=0.16",
]
iree = [
    "iree-compiler>=3.0",
    "iree-runtime>=3.0",
]
benchmarks = [
    "matplotlib>=3.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
ray = [
    "ray[default]>=2.9",
    "ray[serve]>=2.9",
    "ray[tune]>=2.9",
    "fastapi>=0.110",
]
mcp = [
    "mcp>=1.0",
]
demo = [
    "transformers>=4.44",
    "accelerate>=0.33",
]

[project.scripts]
compgen = "compgen.cli:main"
compgen-mcp = "compgen.mcp.server:main"

[project.urls]
Repository = "https://github.com/compgen-project/compgen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/compgen"]

[tool.ruff]
line-length = 120
# Target Python 3.12 for linting: CI + lockfile pin 3.12, and one template
# in kernels/providers/npu_contracts.py uses a 3.12 f-string escape.
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# Tech-debt ignores. Revisit when the baseline is clean.
ignore = [
    "N802",   # invalid-function-name
    "N803",   # invalid-argument-name
    "N806",   # non-lowercase-variable-in-function (torch/MLIR math naming)
    "N812",   # lowercase-imported-as-non-lowercase
    "N818",   # error-suffix-on-exception-name
    "E402",   # module-import-not-at-top-of-file (legitimate lazy imports)
    "E501",   # line-too-long (prefer judgement over hard width)
    "E741",   # ambiguous-variable-name (single-letter math vars)
    "F841",   # local-variable-assigned-but-not-used
    "UP042",  # replace-str-enum (non-breaking suggestion)
]

[tool.ruff.lint.per-file-ignores]
# npu_contracts emits a Python-3.12-only f-string escape; ignored until rewritten.
"python/compgen/kernels/providers/npu_contracts.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
# Centralized flake / env-gated exclusions shared by `make test`,
# local runs, and CI. Override with `pytest --override-ini="addopts="
# <path>` when you need to exercise one of these deliberately.
addopts = [
    # Env-gated: external benchmark deps.
    "--ignore=tests/benchmarks/test_runner.py",
    "--ignore=tests/benchmarks/test_torchbench_adapter.py",
    # Env-gated: requires Understanding-PI0 checkout + 450M SmolVLA.
    "--ignore=tests/test_smolvla_e2e.py",
    # LLM-path flakes.
    "--ignore=tests/agent/test_gepa_loop.py",
    "--ignore=tests/agent/test_pipeline_e2e.py",
    # Individual known-flaky test ids.
    "--deselect=tests/agent/invent_slots/test_registrar.py::test_registrar_registers_all_slots",
    "--deselect=tests/agent/policies/test_default.py::test_policy_against_real_registry",
    "--deselect=tests/kernels/megakernel/test_llama_decoder_layer.py::test_tinyllama_layernorm_scales_are_loaded_from_real_checkpoint",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_gpu: marks tests that need GPU hardware",
    "requires_mlir: marks tests that need MLIR/xDSL installed",
    "requires_ray: marks tests that need Ray installed",
]
